--- a/package.json
+++ b/package.json
@@ -6,24 +6,43 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:unit": "vitest run tests/unit",
+    "test:integration": "vitest run tests/integration",
+    "test:e2e": "vitest run tests/e2e",
+    "test:watch": "vitest watch",
+    "lint": "eslint . --ext vue,js,jsx,cjs,mjs,ts,tsx,cts,mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vueuse/core": "^13.6.0",
-    "axios": "^1.11.0",
-    "chart.js": "^4.4.1",
-    "date-fns": "^4.1.0",
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.5",
+    "pinia": "^2.1.7",
+    "axios": "^1.6.0",
     "js-cookie": "^3.0.5",
-    "lodash-es": "^4.17.21",
-    "pinia": "^3.0.3",
-    "socket.io-client": "^4.8.1",
-    "vee-validate": "^4.5.8",
-    "vue": "^3.5.17",
-    "vue-router": "^4.5.1",
+    "@vueuse/core": "^10.5.0",
+    "date-fns": "^2.30.0",
+    "lodash": "^4.17.21",
+    "chart.js": "^4.4.0",
+    "vue-chartjs": "^5.2.0",
     "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^6.0.0",
-    "vite": "^7.0.4"
+    "@vitejs/plugin-vue": "^4.5.0",
+    "vite": "^5.0.0",
+    "@vue/test-utils": "^2.4.0",
+    "vitest": "^1.0.0",
+    "jsdom": "^23.0.0",
+    "happy-dom": "^12.0.0",
+    "@vitest/ui": "^1.0.0",
+    "@vitest/coverage-v8": "^1.0.0",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "prettier": "^3.0.0"
   }
 }
+
